fixed Text box whitespace errors; using textarea

--- a/views/css/pips2.css
+++ b/views/css/pips2.css
@@ -448,6 +448,10 @@ button.selected {
     resize: vertical;
 }
 
+.captions {
+    overflow-y: hidden;
+}
+
 .imagetoolsbox {
     border: 1px solid black;
     width: auto;
